serving videos from http, fixing broken layouts, minor whitespace adjustments

--- a/src/css/fln/icons.scss
+++ b/src/css/fln/icons.scss
@@ -6,7 +6,7 @@
     width: 1em;
     height: 1em;
     margin-left: .75em;
-    margin-bottom: -.125em;
+    margin-top: .125em;
   }
   &.down {
     @include icon('arrow-down');
